--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="manifest" href="/site.webmanifest" />
 
-  <meta name="description" content="" />
+  <meta name="description" content="Industrial water treatment supplier in India and UAE. Genoasis provides FRP filters, RO membranes, pumps and chemicals. Contact our Chennai and Dubai teams." />
   <meta name="keywords" content="bootstrap, bootstrap4" />
 
 		<!-- Bootstrap CSS -->
@@ -976,7 +976,7 @@
 				}
 			}
 		</style>
-		<title>Genoasis - About Us</title>
+		<title>About Genoasis – Industrial Water Treatment India & UAE</title>
 		<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 	</head>
 		<!-- Start Top Bar -->
@@ -1006,7 +1006,7 @@
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Genoasis navigation bar">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+						<img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenoasis" aria-controls="navbarsGenoasis" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -1050,9 +1050,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-8 mx-auto text-center hero-content">
-						<h1 class="hero-title" data-aos="fade-up">About Genoasis</h1>
+						<h1 class="hero-title" data-aos="fade-up">Industrial Water Treatment Supplier – Genoasis India & UAE</h1>
 						<p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Innovative Solutions for a Sustainable Future</p>
-						<p class="lead" data-aos="fade-up" data-aos-delay="400">Driven by innovation to transform industries through cutting-edge water treatment, industrial applications, and laboratory solutions.</p>
+						<p class="lead" data-aos="fade-up" data-aos-delay="400">Genoasis is a water treatment trading company in UAE and India with teams in Chennai and Dubai. Driven by innovation to transform industries through cutting-edge water treatment, industrial applications, and laboratory solutions. Explore our <a href="Products.html">products</a> or <a href="contact.html">contact us</a> for a quote.</p>
 					</div>
 				</div>
 			</div>
@@ -1230,7 +1230,7 @@
 								<div class="col-lg-3 col-md-6 mb-3">
 									<div class="feature-card">
 										<div class="feature-icon">
-											<img src="images/truck.svg" alt="High Quality" class="img-fluid">
+										<img src="images/truck.svg" alt="High quality industrial supplier India UAE – Genoasis" class="img-fluid">
 										</div>
 										<h4 class="feature-title">High-Quality Products</h4>
 										<p class="feature-text">We prioritize quality in every product, ensuring durability, reliability, and compliance with international standards.</p>
@@ -1240,7 +1240,7 @@
 								<div class="col-lg-3 col-md-6 mb-3">
 									<div class="feature-card">
 										<div class="feature-icon">
-											<img src="images/bag.svg" alt="Customized Solutions" class="img-fluid">
+										<img src="images/bag.svg" alt="Customized water treatment solutions Chennai Dubai – Genoasis" class="img-fluid">
 										</div>
 										<h4 class="feature-title">Customized Solutions</h4>
 										<p class="feature-text">We understand that each client's needs are unique. Our team works closely with you to provide tailored solutions.</p>
@@ -1250,7 +1250,7 @@
 								<div class="col-lg-3 col-md-6 mb-3">
 									<div class="feature-card">
 										<div class="feature-icon">
-											<img src="images/support.svg" alt="Expert Support" class="img-fluid">
+										<img src="images/support.svg" alt="Expert support India UAE industrial water treatment – Genoasis" class="img-fluid">
 										</div>
 										<h4 class="feature-title">Expert Support and Service</h4>
 										<p class="feature-text">Our knowledgeable team offers comprehensive support at every stage, from product selection to after-sales service.</p>
@@ -1260,7 +1260,7 @@
 								<div class="col-lg-3 col-md-6 mb-3">
 									<div class="feature-card">
 										<div class="feature-icon">
-											<img src="images/return.svg" alt="Sustainability" class="img-fluid">
+										<img src="images/return.svg" alt="Sustainable water treatment supplier India UAE – Genoasis" class="img-fluid">
 										</div>
 										<h4 class="feature-title">Commitment to Sustainability</h4>
 										<p class="feature-text">We are dedicated to eco-friendly practices, providing sustainable products that minimize environmental impact.</p>
