--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
   <!-- Add AOS CSS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   
-  <title>Contact Us | Genoasis Water Technologies</title>
+  <title>Contact Genoasis – Water Treatment Supplier India & UAE</title>
   <script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
   
   <style>
@@ -658,7 +658,7 @@
   <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Genoasis navigation bar">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+        <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenoasis" aria-controls="navbarsGenoasis" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
