--- a/festo-products.html
+++ b/festo-products.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="Festo Pneumatic Products by Genoasis - Cylinders, Valves, Fittings, Air Preparation Units" />
+    <meta name="description" content="Festo pneumatic products: cylinders, valves, fittings, air preparation units. Industrial supplier in India & UAE. Contact Chennai or Dubai." />
     <meta name="keywords" content="Festo, pneumatic cylinders, solenoid valves, push-in fittings, air preparation, Genoasis" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
@@ -242,6 +242,25 @@
         .hero-content {
             position: relative;
             z-index: 2;
+        }
+
+        .hero-section .lead {
+            color: white;
+            opacity: 0.95;
+        }
+        
+        /* Hero section links styling */
+        .hero-section a {
+            color: white !important;
+            text-decoration: underline;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+        
+        .hero-section a:hover {
+            color: #f8f9fa !important;
+            text-decoration: none;
+            transform: translateY(-1px);
         }
 
         .hero-title {
@@ -567,7 +586,7 @@
             }
         }
     </style>
-    <title>Festo Products - Genoasis</title>
+    <title>Festo Pneumatic Products – Cylinders, Valves | India & UAE</title>
 </head>
 <body>
     <!-- Start Top Bar -->
@@ -596,7 +615,7 @@
     <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Genoasis navigation bar">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenoasis" aria-controls="navbarsGenoasis" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -641,8 +660,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 mx-auto text-center hero-content">
-                    <h1 class="hero-title" data-aos="fade-up">Festo Products</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Complete Range of Pneumatic Components & Systems</p>
+                    <h1 class="hero-title" data-aos="fade-up">Festo Pneumatic Products – India & UAE</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Complete range of pneumatic components across India and UAE. Browse <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/Dubai</a>.</p>
                     <p class="lead" data-aos="fade-up" data-aos-delay="400">Click on any category to explore our comprehensive range of Festo products</p>
                 </div>
             </div>
@@ -793,7 +812,7 @@
                 <div class="col-lg-4">
                     <div class="mb-4 footer-logo-wrap">
                         <a href="#" class="footer-logo">
-                            <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                            <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
                         </a>
                     </div>
                     <p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p>
