--- a/filters.html
+++ b/filters.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="" />
+    <meta name="description" content="Industrial filter cartridges and housings for pure water systems. Supplier in India and UAE. Get support from our Chennai and Dubai teams." />
     <meta name="keywords" content="bootstrap, bootstrap4" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
@@ -291,6 +291,20 @@
         .hero-content { position: relative; z-index: 2; }
         .hero-title { font-size: 3.0rem; font-weight: 700; margin-bottom: 1rem; color: #fff; }
         .hero-subtitle { font-size: 1.2rem; font-weight: 300; opacity: 0.95; }
+        
+        /* Hero section links styling */
+        .hero-section a {
+            color: white !important;
+            text-decoration: underline;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+        
+        .hero-section a:hover {
+            color: #f8f9fa !important;
+            text-decoration: none;
+            transform: translateY(-1px);
+        }
 
         /* Modern Content Sections */
         .content-section { background: #fff; }
@@ -849,7 +863,7 @@
             }
         }
     </style>
-    <title>Genoasis - Filters</title>
+    <title>Filter Cartridges & Housings – Genoasis India & UAE</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 </head>
 	<!-- Start Top Bar -->
@@ -878,7 +892,7 @@
     <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Genoasis navigation bar">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenoasis" aria-controls="navbarsGenoasis" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -922,8 +936,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
-                    <h1 class="hero-title" data-aos="fade-up">Filters & Filter Housings</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">High‑performance filtration for industrial and commercial applications</p>
+                    <h1 class="hero-title" data-aos="fade-up">Filter Cartridges & Housings – India & UAE</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">High‑performance filtration for industrial and commercial applications across India and UAE. Explore our <a href="Products.html">products</a> or <a href="contact.html">contact our Chennai and Dubai teams</a>.</p>
                 </div>
             </div>
         </div>
@@ -937,7 +951,7 @@
                 <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <h2 class="section-title mb-3">Filters & Filter Housings</h2>
-                        <p class="lead mb-4">Genoasis supplies replacement cartridges and bag filters for industries such as Oil & Gas, Food & Beverage, and Pharmaceuticals. We offer a complete range of filtration products and systems for pure water purification. To meet restocking needs, we provide competitive supply agreements and express delivery services as needed.</p>
+                        <p class="lead mb-4">Genoasis supplies replacement cartridges and bag filters for industries such as Oil & Gas, Food & Beverage, and Pharmaceuticals. We offer a complete range of filtration products and systems for pure water purification. To meet restocking needs, we provide competitive supply agreements and express delivery services as needed. We supply across India and UAE from Chennai and Dubai — browse our <a href="Products.html">full product range</a>.</p>
                         <p class="mb-4">We offer a variety of Filtration Cartridge Housing, including String Wound and Melt Blown Filtration Cartridges, designed to meet the needs of various industrial filtration applications. These cartridges are engineered for superior performance, durability, and efficiency.</p>
 
                         <h3 class="mb-3">Features & Benefits</h3>
@@ -980,7 +994,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="image-container" data-aos="fade-up">
-                        <img src="images/filters1.jpg" alt="Membrane Technologies" class="gallery-img">
+                        <img src="images/filters1.jpg" alt="Filter cartridges and housings supplier India UAE – Genoasis" class="gallery-img">
                     </div>
                 </div>
             </div>
@@ -1018,7 +1032,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="image-container" data-aos="fade-up">
-                        <img src="images/filters2.jpg" alt="Filter Bags & Housing" class="gallery-img">
+                        <img src="images/filters2.jpg" alt="Industrial filter bags and housings supplier India UAE – Genoasis" class="gallery-img">
                     </div>
                 </div>
             </div>
@@ -1045,7 +1059,7 @@
                 <div class="col-lg-4">
                     <div class="mb-4 footer-logo-wrap">
                         <a href="#" class="footer-logo">
-                            <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                            <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
                         </a>
                     </div>
                     <p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p>
