--- a/pumps.html
+++ b/pumps.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="" />
+    <meta name="description" content="Industrial pumps for water and wastewater: end suction, multistage, submersible and dosing pumps. Supplier in India & UAE. Contact Chennai or Dubai." />
     <meta name="keywords" content="bootstrap, bootstrap4" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
@@ -312,6 +312,25 @@
         .hero-content {
             position: relative;
             z-index: 2;
+        }
+
+        .hero-section .lead {
+            color: white;
+            opacity: 0.95;
+        }
+        
+        /* Hero section links styling */
+        .hero-section a {
+            color: white !important;
+            text-decoration: underline;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+        
+        .hero-section a:hover {
+            color: #f8f9fa !important;
+            text-decoration: none;
+            transform: translateY(-1px);
         }
 
         .hero-title {
@@ -1042,7 +1061,7 @@
             }
         }
     </style>
-    <title>Genoasis - Pumps</title>
+    <title>Industrial Pumps – India & UAE | End Suction, Multistage, Dosing</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 </head>
 	<!-- Start Top Bar -->
@@ -1071,7 +1090,7 @@
     <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Genoasis navigation bar">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenoasis" aria-controls="navbarsGenoasis" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -1116,8 +1135,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
-                    <h1 class="hero-title" data-aos="fade-up">Pumps</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Advanced Pumping Solutions for Every Industry</p>
+                    <h1 class="hero-title" data-aos="fade-up">Industrial Pumps – India & UAE</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Advanced pumping solutions for water and wastewater across India and UAE. Explore our <a href="Products.html">product range</a> or <a href="contact.html">request a quote</a>.</p>
                     <p class="lead" data-aos="fade-up" data-aos-delay="400">Comprehensive range of high-quality pumps designed for diverse applications including water treatment, chemical processing, industrial operations, and specialized environments.</p>
                 </div>
             </div>
@@ -1133,7 +1152,7 @@
         <!-- End Suction Pumps -->
             <div class="product-card" data-aos="fade-up" data-product="end-suction">
                 <div class="product-image">
-                    <img src="images/end-suction-pumps.jpg" alt="End Suction Pumps">
+                    <img src="images/end-suction-pumps.jpg" alt="End suction industrial pumps supplier India UAE – Genoasis">
                     <div class="product-overlay">
                         <span class="read-more">Read More</span>
                     </div>
@@ -1147,7 +1166,7 @@
             <!-- Horizontal Centrifugal Pumps -->
             <div class="product-card" data-aos="fade-up" data-product="horizontal-centrifugal">
                 <div class="product-image">
-                    <img src="images/horizontal-centrifugal-pumps.jpg" alt="Horizontal Centrifugal Pumps">
+                    <img src="images/horizontal-centrifugal-pumps.jpg" alt="Horizontal centrifugal pumps supplier India UAE – Genoasis">
                     <div class="product-overlay">
                         <span class="read-more">Read More</span>
                     </div>
@@ -1161,7 +1180,7 @@
             <!-- Vertical Multistage Pumps -->
             <div class="product-card" data-aos="fade-up" data-product="vertical-multistage">
                 <div class="product-image">
-                    <img src="images/vertical-multistage-pumps.jpg" alt="Vertical Multistage Pumps">
+                    <img src="images/vertical-multistage-pumps.jpg" alt="Vertical multistage pumps supplier India UAE – Genoasis">
                     <div class="product-overlay">
                         <span class="read-more">Read More</span>
                     </div>
@@ -1175,7 +1194,7 @@
             <!-- Sea Water FRP Pumps -->
             <div class="product-card" data-aos="fade-up" data-product="sea-water-frp">
                 <div class="product-image">
-                    <img src="images/sea-water-frp-pumps.jpg" alt="Sea Water FRP Pumps">
+                    <img src="images/sea-water-frp-pumps.jpg" alt="Sea water FRP pumps supplier India UAE – Genoasis">
                     <div class="product-overlay">
                         <span class="read-more">Read More</span>
                     </div>
@@ -1189,7 +1208,7 @@
             <!-- Sea Water Super Duplex Pumps -->
             <div class="product-card" data-aos="fade-up" data-product="sea-water-super-duplex">
                 <div class="product-image">
-                    <img src="images/sea-water-super-duplex-pumps.jpg" alt="Sea Water Super Duplex Pumps">
+                    <img src="images/sea-water-super-duplex-pumps.jpg" alt="Sea water super duplex pumps supplier India UAE – Genoasis">
                     <div class="product-overlay">
                         <span class="read-more">Read More</span>
                     </div>
@@ -1203,7 +1222,7 @@
             <!-- Submersible Pumps -->
             <div class="product-card" data-aos="fade-up" data-product="submersible">
                 <div class="product-image">
-                    <img src="images/submersible-pumps.jpg" alt="Submersible Pumps">
+                    <img src="images/submersible-pumps.jpg" alt="Submersible pumps supplier India UAE – Genoasis">
                     <div class="product-overlay">
                         <span class="read-more">Read More</span>
                     </div>
@@ -1217,7 +1236,7 @@
             <!-- Borewell Pumps -->
             <div class="product-card" data-aos="fade-up" data-product="borewell">
                 <div class="product-image">
-                    <img src="images/borewell-pumps.jpg" alt="Borewell Pumps">
+                    <img src="images/borewell-pumps.jpg" alt="Borewell pumps supplier India UAE – Genoasis">
                     <div class="product-overlay">
                         <span class="read-more">Read More</span>
                     </div>
@@ -1231,7 +1250,7 @@
             <!-- Progressive Cavity Pumps -->
             <div class="product-card" data-aos="fade-up" data-product="progressive-cavity">
                 <div class="product-image">
-                    <img src="images/progressive-cavity-pumps.jpg" alt="Progressive Cavity Pumps">
+                    <img src="images/progressive-cavity-pumps.jpg" alt="Progressive cavity pumps supplier India UAE – Genoasis">
                     <div class="product-overlay">
                         <span class="read-more">Read More</span>
                     </div>
@@ -1245,7 +1264,7 @@
             <!-- Air Operated Diaphragm Pumps -->
             <div class="product-card" data-aos="fade-up" data-product="aodd">
                 <div class="product-image">
-                    <img src="images/aodd-pumps.jpg" alt="Air Operated Diaphragm Pumps">
+                    <img src="images/aodd-pumps.jpg" alt="Air operated diaphragm pumps AODD supplier India UAE – Genoasis">
                     <div class="product-overlay">
                         <span class="read-more">Read More</span>
                     </div>
@@ -1259,7 +1278,7 @@
             <!-- Swimming Pool Pumps -->
             <div class="product-card" data-aos="fade-up" data-product="swimming-pool">
                 <div class="product-image">
-                    <img src="images/swimming-pool-pumps.jpg" alt="Swimming Pool Pumps">
+                    <img src="images/swimming-pool-pumps.jpg" alt="Swimming pool pumps supplier India UAE – Genoasis">
                     <div class="product-overlay">
                         <span class="read-more">Read More</span>
                     </div>
@@ -1273,7 +1292,7 @@
             <!-- Diesel Pumps -->
             <div class="product-card" data-aos="fade-up" data-product="diesel-pump">
                 <div class="product-image">
-                    <img src="images/diesel-pump.jpg" alt="Diesel Pumps">
+                    <img src="images/diesel-pump.jpg" alt="Diesel pumps supplier India UAE – Genoasis">
                     <div class="product-overlay">
                         <span class="read-more">Read More</span>
                     </div>
@@ -1287,7 +1306,7 @@
             <!-- Metering & Dosing Pumps -->
             <div class="product-card" data-aos="fade-up" data-product="metering-dosing">
                 <div class="product-image">
-                    <img src="images/metering.jpg" alt="Metering & Dosing Pumps">
+                    <img src="images/metering.jpg" alt="Metering and dosing pumps supplier India UAE – Genoasis">
                     <div class="product-overlay">
                         <span class="read-more">Read More</span>
                     </div>
@@ -1322,7 +1341,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="cta-title" data-aos="fade-up">Ready to Transform Your Water Treatment?</h2>
-                    <p class="cta-description" data-aos="fade-up" data-aos-delay="200">Contact our experts today to discuss your pump requirements and get a customized solution for your facility.</p>
+                    <p class="cta-description" data-aos="fade-up" data-aos-delay="200">Contact our experts in Chennai or Dubai to discuss your pump requirements and get a customized solution for your facility.</p>
                     <a href="contact.html" class="btn-cta" data-aos="fade-up" data-aos-delay="400">Get Expert Consultation</a>
                 </div>
             </div>
@@ -1336,7 +1355,7 @@
                 <div class="col-lg-4">
                     <div class="mb-4 footer-logo-wrap">
                         <a href="#" class="footer-logo">
-                            <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                            <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
                         </a>
                     </div>
                     <p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p>
