--- a/sandmedia.html
+++ b/sandmedia.html
@@ -8,8 +8,8 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="bootstrap, bootstrap4" />
+    <meta name="description" content="Advanced Instrumentation & Lab Apparatus by Genoasis - Precision sensors, transmitters, and control systems for water treatment optimization" />
+    <meta name="keywords" content="sand media, ion exchange resins, silica sand, activated carbon, filtration media, water treatment, India, UAE, Chennai, Dubai" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
     <script>
@@ -291,6 +291,20 @@
         .hero-content { position: relative; z-index: 2; }
         .hero-title { font-size: 3rem; font-weight: 700; margin-bottom: 1rem; color: #fff; }
         .hero-subtitle { font-size: 1.2rem; font-weight: 300; opacity: 0.95; }
+        
+        /* Hero section links styling */
+        .hero-section a {
+            color: white !important;
+            text-decoration: underline;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+        
+        .hero-section a:hover {
+            color: #f8f9fa !important;
+            text-decoration: none;
+            transform: translateY(-1px);
+        }
 
         /* Modern Content Sections */
         .content-section { background: #fff; }
@@ -725,7 +739,7 @@
             }
         }
     </style>
-    <title>Genoasis - Filtration Media & Ion Exchange Resins</title>
+    <title>Sand Media & Ion Exchange Resins – India & UAE | Genoasis</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 </head>
 	<!-- Start Top Bar -->
@@ -754,7 +768,7 @@
     <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Genoasis navigation bar">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenoasis" aria-controls="navbarsGenoasis" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -798,8 +812,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
-                    <h1 class="hero-title" data-aos="fade-up">Filtration Media & Ion Exchange Resins</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">High‑performance media for municipal and industrial water treatment</p>
+                    <h1 class="hero-title" data-aos="fade-up">Sand Media & Ion Exchange Resins – India & UAE</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">High‑performance media for municipal and industrial water treatment across India and UAE. Browse our <a href="Products.html">products</a> or <a href="contact.html">contact our Chennai and Dubai teams</a>.</p>
                 </div>
             </div>
         </div>
@@ -812,7 +826,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
-                        <p class="lead mb-0">We are a leading supplier and trader of high‑quality industrial filtration materials, including silica sand, ion‑exchange resins, activated carbon, anthracite, and advanced filter media. Our products are designed to meet the highest standards in water treatment, ensuring optimal performance across a variety of applications, from municipal and industrial water purification to specialized filtration systems.</p>
+                        <p class="lead mb-0">We are a leading supplier and trader of high‑quality industrial filtration materials, including silica sand, ion‑exchange resins, activated carbon, anthracite, and advanced filter media. Our products are designed to meet the highest standards in water treatment, ensuring optimal performance across a variety of applications, from municipal and industrial water purification to specialized filtration systems. We supply across India & UAE via our Chennai and Dubai teams.</p>
                     </div>
                 </div>
             </div>
@@ -828,7 +842,7 @@
                         <h2 class="section-title mb-3">Filtration Silica Sand</h2>
                         <p class="lead mb-4">We specialize in processing raw silica sand through multi-stage processes, including washing, attrition, drying, and sieving, to produce high‑purity, well‑graded products. Our silica sand is available in various sizes, meeting US mesh specifications.</p>
                         <div class="image-container mb-4">
-                            <img src="images/silicasand.jpg" alt="Silica Sand" class="gallery-img">
+                            <img src="images/silicasand.jpg" alt="Silica sand supplier India UAE – Genoasis" class="gallery-img">
                         </div>
                         <div class="table-responsive mt-2">
                             <table class="table table-striped table-bordered">
@@ -873,7 +887,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="image-container mt-3 mt-md-0">
-                                    <img src="images/filtrationgravel.jpg" alt="Filtration Gravel" class="gallery-img">
+                                    <img src="images/filtrationgravel.jpg" alt="Filtration gravel supplier India UAE – Genoasis" class="gallery-img">
                                 </div>
                             </div>
                         </div>
@@ -945,7 +959,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="image-container mt-3 mt-md-0">
-                                    <img src="images/ionexchangeresins.jpg" alt="Ion Exchange Resins" class="gallery-img">
+                                    <img src="images/ionexchangeresins.jpg" alt="Ion exchange resins supplier India UAE – Genoasis" class="gallery-img">
                                 </div>
                             </div>
                         </div>
@@ -1003,7 +1017,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="image-container mt-3 mt-md-0">
-                                    <img src="images/activatedcarbon.jpg" alt="Activated Carbon" class="gallery-img">
+                                    <img src="images/activatedcarbon.jpg" alt="Activated carbon supplier India UAE – Genoasis" class="gallery-img">
                                 </div>
                             </div>
                         </div>
@@ -1048,7 +1062,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="image-container mt-3 mt-md-0">
-                                    <img src="images/anthracite.jpg" alt="Anthracite" class="gallery-img">
+                                    <img src="images/anthracite.jpg" alt="Anthracite filtration media supplier India UAE – Genoasis" class="gallery-img">
                                 </div>
                             </div>
                         </div>
@@ -1091,7 +1105,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="image-container mt-3 mt-md-0">
-                                    <img src="images/afm.jpg" alt="Activated Filter Media" class="gallery-img">
+                                    <img src="images/afm.jpg" alt="Activated filter media AFM supplier India UAE – Genoasis" class="gallery-img">
                                 </div>
                             </div>
                         </div>
@@ -1121,7 +1135,7 @@
                 <div class="col-lg-4">
                     <div class="mb-4 footer-logo-wrap">
                         <a href="#" class="footer-logo">
-                            <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                            <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
                         </a>
                     </div>
                     <p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p>
