--- a/Products.html
+++ b/Products.html
@@ -8,8 +8,8 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="bootstrap, bootstrap4" />
+    <meta name="description" content="FRP filters, RO vessels, membranes, pumps and chemicals. Industrial supplier in India and UAE. Browse products and contact Chennai or Dubai teams." />
+    <meta name="keywords" content="water treatment products, FRP filters, RO vessels, membranes, pumps, chemicals, industrial equipment, India, UAE, Chennai, Dubai" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
     <script>
@@ -978,7 +978,7 @@
             }
         }
     </style>
-    <title>Genoasis - Products</title>
+    <title>FRP Filters, RO Vessels, Membranes – Products | Genoasis</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 </head>
 	<!-- Start Top Bar -->
@@ -1007,7 +1007,7 @@
     <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Genoasis navigation bar">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenoasis" aria-controls="navbarsGenoasis" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -1052,8 +1052,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center mb-5">
-                    <h2 class="display-4 fw-bold" data-aos="fade-up">Our Product Categories</h2>
-                    <p class="lead text-muted" data-aos="fade-up" data-aos-delay="200">Explore our comprehensive range of water treatment solutions</p>
+                    <h2 class="display-4 fw-bold" data-aos="fade-up">Industrial Water Treatment Products – India & UAE</h2>
+                    <p class="lead text-muted" data-aos="fade-up" data-aos-delay="200">Explore FRP filters, RO vessels, membranes, pumps and chemicals. Need pricing? <a href="contact.html">Contact Chennai or Dubai</a>.</p>
                 </div>
             </div>
             
