--- a/Wastewater.html
+++ b/Wastewater.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="Advanced Wastewater Treatment Equipment by Genoasis - MBBR media, diffusers, and filtration systems for efficient water treatment" />
+    <meta name="description" content="Wastewater treatment equipment: MBBR media, diffusers, biofilters. Industrial supplier in India & UAE. Contact Chennai or Dubai teams." />
     <meta name="keywords" content="wastewater treatment, MBBR media, diffusers, biofilter, Genoasis, water treatment equipment" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
@@ -231,6 +231,25 @@
         .hero-content {
             position: relative;
             z-index: 2;
+        }
+
+        .hero-section .lead {
+            color: white;
+            opacity: 0.95;
+        }
+        
+        /* Hero section links styling */
+        .hero-section a {
+            color: white !important;
+            text-decoration: underline;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+        
+        .hero-section a:hover {
+            color: #f8f9fa !important;
+            text-decoration: none;
+            transform: translateY(-1px);
         }
 
         .hero-title {
@@ -820,7 +839,7 @@
             }
         }
     </style>
-    <title>Wastewater Treatment Equipment | Genoasis Water Technologies</title>
+    <title>Wastewater Treatment Equipment – MBBR Media & Diffusers | India & UAE</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 </head>
 	<!-- Start Top Bar -->
@@ -849,7 +868,7 @@
     <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Genoasis navigation bar">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenoasis" aria-controls="navbarsGenoasis" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -894,8 +913,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
-                    <h1 class="hero-title" data-aos="fade-up">Wastewater Treatment Equipment</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Advanced Solutions for Efficient Water Treatment</p>
+                    <h1 class="hero-title" data-aos="fade-up">Wastewater Treatment Equipment – India & UAE</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Advanced solutions for efficient water treatment across India and UAE. Browse <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/Dubai</a>.</p>
                     <p class="lead" data-aos="fade-up" data-aos-delay="400">Genoasis provides comprehensive wastewater treatment solutions including MBBR media, diffusers, and filtration systems designed for optimal performance and long-term reliability in industrial and municipal applications.</p>
                 </div>
             </div>
@@ -916,7 +935,7 @@
                 <!-- MBBR Media & Biofilters -->
                 <div class="product-card" data-aos="fade-up" data-product="mbbr-media">
                     <div class="product-image">
-                        <img src="images/mbbrmedia.jpg" alt="MBBR Media & Biofilters">
+                        <img src="images/mbbrmedia.jpg" alt="MBBR media and biofilters supplier India UAE – Genoasis">
                         <div class="product-overlay">
                             <span class="read-more">Read More</span>
                         </div>
@@ -930,7 +949,7 @@
                 <!-- Aeration & Diffuser Systems -->
                 <div class="product-card" data-aos="fade-up" data-product="aeration-diffusers">
                     <div class="product-image">
-                        <img src="images/finebubble.jpg" alt="Aeration & Diffuser Systems">
+                        <img src="images/finebubble.jpg" alt="Aeration and diffuser systems supplier India UAE – Genoasis">
                         <div class="product-overlay">
                             <span class="read-more">Read More</span>
                         </div>
@@ -1164,7 +1183,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="cta-title" data-aos="fade-up">Ready to Transform Your Water Treatment?</h2>
-                    <p class="cta-description" data-aos="fade-up" data-aos-delay="200">Contact our experts today to discuss your wastewater treatment requirements and get a customized solution for your facility.</p>
+                    <p class="cta-description" data-aos="fade-up" data-aos-delay="200">Contact our experts in Chennai or Dubai to discuss your wastewater treatment requirements and get a customized solution.</p>
                     <a href="contact.html" class="btn-cta" data-aos="fade-up" data-aos-delay="400">Get Expert Consultation</a>
                 </div>
             </div>
@@ -1178,7 +1197,7 @@
                 <div class="col-lg-4">
                     <div class="mb-4 footer-logo-wrap">
                         <a href="#" class="footer-logo">
-                            <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                            <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
                         </a>
                     </div>
                     <p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p>
