--- a/chemicals.html
+++ b/chemicals.html
@@ -8,8 +8,8 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="bootstrap, bootstrap4" />
+    <meta name="description" content="Specialty and commercial water treatment chemicals for RO and wastewater. Serving India and UAE. Get expert advice from our Chennai and Dubai teams." />
+    <meta name="keywords" content="water treatment chemicals, RO antiscalants, wastewater chemicals, industrial chemicals, India, UAE, Chennai, Dubai" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
     <script>
@@ -291,6 +291,20 @@
         .hero-content { position: relative; z-index: 2; }
         .hero-title { font-size: 3rem; font-weight: 700; margin-bottom: 1rem; color: #fff; }
         .hero-subtitle { font-size: 1.2rem; font-weight: 300; opacity: 0.95; }
+        
+        /* Hero section links styling */
+        .hero-section a {
+            color: white !important;
+            text-decoration: underline;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+        
+        .hero-section a:hover {
+            color: #f8f9fa !important;
+            text-decoration: none;
+            transform: translateY(-1px);
+        }
 
         /* Modern Content Sections */
         .content-section { background: #fff; }
@@ -815,7 +829,7 @@
             }
         }
     </style>
-    <title>Genoasis - Chemicals</title>
+    <title>Water Treatment Chemicals – RO Antiscalants | Genoasis</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 </head>
 	<!-- Start Top Bar -->
@@ -844,7 +858,7 @@
     <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Genoasis navigation bar">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenoasis" aria-controls="navbarsGenoasis" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -888,8 +902,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
-                    <h1 class="hero-title" data-aos="fade-up">Water Treatment Chemicals</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Specialty chemicals for industrial and municipal water treatment</p>
+                    <h1 class="hero-title" data-aos="fade-up">Water Treatment Chemicals for RO & Wastewater – India & UAE</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Supplying specialty chemicals across Chennai, India and Dubai, UAE. Need help choosing chemicals? <a href="contact.html">Contact our experts</a>.</p>
                 </div>
             </div>
         </div>
@@ -1473,7 +1487,7 @@
                 <div class="col-lg-4">
                     <div class="mb-4 footer-logo-wrap">
                         <a href="#" class="footer-logo">
-                            <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                            <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
                         </a>
                     </div>
                     <p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p>
