--- a/dunnage-air-bags.html
+++ b/dunnage-air-bags.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="High-quality Dunnage Air Bags. Genoasis offers durable air bags for containers, trucks, and ships with various sizes and custom solutions." />
+    <meta name="description" content="Dunnage air bags for cargo protection: containers, trucks, ships. High-quality supplier in India & UAE. Contact Chennai or Dubai." />
     <meta name="keywords" content="dunnage air bags, cargo protection, shipping containers, load securement, Genoasis" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
@@ -291,6 +291,20 @@
         .hero-content { position: relative; z-index: 2; }
         .hero-title { font-size: 3.0rem; font-weight: 700; margin-bottom: 1rem; color: #fff; }
         .hero-subtitle { font-size: 1.2rem; font-weight: 300; opacity: 0.95; }
+        
+        /* Hero section links styling */
+        .hero-section a {
+            color: white !important;
+            text-decoration: underline;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+        
+        .hero-section a:hover {
+            color: #f8f9fa !important;
+            text-decoration: none;
+            transform: translateY(-1px);
+        }
 
         /* Modern Content Sections */
         .content-section { background: #fff; }
@@ -457,7 +471,7 @@
             margin-bottom: 1.5rem;
         }
     </style>
-    <title>Genoasis - Dunnage Air Bags</title>
+    <title>Dunnage Air Bags – Cargo Protection | India & UAE | Genoasis</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 </head>
 	<!-- Start Top Bar -->
@@ -486,7 +500,7 @@
     <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Genoasis navigation bar">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenoasis" aria-controls="navbarsGenoasis" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -531,8 +545,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
-                    <h1 class="hero-title" data-aos="fade-up">Dunnage Air Bags</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">High-quality, durable air bags</p>
+                    <h1 class="hero-title" data-aos="fade-up">Dunnage Air Bags – India & UAE</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">High-quality, durable air bags across India and UAE. View <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/Dubai</a>.</p>
                 </div>
             </div>
         </div>
@@ -678,7 +692,7 @@
                 <div class="col-lg-4">
                     <div class="mb-4 footer-logo-wrap">
                         <a href="#" class="footer-logo">
-                            <img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+                            <img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
                         </a>
                     </div>
                     <p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p>
