--- a/index.html
+++ b/index.html
@@ -19,15 +19,110 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="manifest" href="/site.webmanifest" />
 
-  <meta name="description" content="" />
-  <meta name="keywords" content="bootstrap, bootstrap4" />
+  <meta name="description" content="Industrial water treatment solutions by Genoasis across India and UAE. FRP filters, RO vessels, membranes, pumps and chemicals. Chennai and Dubai support." />
+  <meta name="keywords" content="water treatment, industrial equipment, FRP filters, RO vessels, membranes, pumps, chemicals, India, UAE, Chennai, Dubai" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://genoasis.com/" />
+  <meta property="og:title" content="Industrial Water Treatment Solutions – Genoasis India & UAE" />
+  <meta property="og:description" content="Industrial water treatment solutions by Genoasis across India and UAE. FRP filters, RO vessels, membranes, pumps and chemicals. Chennai and Dubai support." />
+  <meta property="og:image" content="https://genoasis.com/images/logo.png" />
+  <meta property="og:site_name" content="Genoasis" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://genoasis.com/" />
+  <meta property="twitter:title" content="Industrial Water Treatment Solutions – Genoasis India & UAE" />
+  <meta property="twitter:description" content="Industrial water treatment solutions by Genoasis across India and UAE. FRP filters, RO vessels, membranes, pumps and chemicals. Chennai and Dubai support." />
+  <meta property="twitter:image" content="https://genoasis.com/images/logo.png" />
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://genoasis.com/" />
+  
+  <!-- Organization Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Genoasis",
+    "alternateName": "Genoasis Water Technologies",
+    "url": "https://genoasis.com",
+    "logo": "https://genoasis.com/images/logo.png",
+    "description": "Industrial water treatment solutions provider specializing in FRP filters, RO vessels, membranes, pumps, and chemicals across India and UAE.",
+    "foundingDate": "2020",
+    "contactPoint": [
+      {
+        "@type": "ContactPoint",
+        "telephone": "+91-892-588-3227",
+        "contactType": "customer service",
+        "areaServed": "IN",
+        "availableLanguage": ["English", "Hindi", "Tamil"]
+      },
+      {
+        "@type": "ContactPoint",
+        "telephone": "+971-50-357-1340",
+        "contactType": "customer service",
+        "areaServed": "AE",
+        "availableLanguage": ["English", "Arabic", "Hindi"]
+      }
+    ],
+    "address": [
+      {
+        "@type": "PostalAddress",
+        "streetAddress": "6, Balaji St, Guduvancherry",
+        "addressLocality": "Chennai",
+        "addressRegion": "Tamil Nadu",
+        "addressCountry": "IN"
+      }
+    ],
+    "sameAs": [
+      "https://www.linkedin.com/company/genoasis",
+      "https://www.facebook.com/genoasis"
+    ],
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Water Treatment Products",
+      "itemListElement": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Product",
+            "name": "FRP Filters and RO Vessels"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Product",
+            "name": "Membrane Products"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Product",
+            "name": "Water Treatment Pumps"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Product",
+            "name": "Water Treatment Chemicals"
+          }
+        }
+      ]
+    }
+  }
+  </script>
 
 		<!-- Bootstrap CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="css/tiny-slider.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<title>Genoasis - Home</title>
+		<title>Industrial Water Treatment – Genoasis India & UAE</title>
 		<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 		<style>
 			/* Modern Navigation Styles */
@@ -320,7 +415,7 @@
 
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+					<img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsGenoasis" aria-controls="navbarsGenoasis" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -367,7 +462,7 @@
 				<div class="row justify-content-between">
 					<div class="col-lg-5">
 						<div class="intro-excerpt">
-							<h1>Advanced Water Solutions You Can Trust,</span><span class="d-block">Creating a <br>Sustainable Future</span></h1>
+						<h1>Industrial Water Treatment Supplier – India & UAE</span><span class="d-block">Advanced Solutions for a Sustainable Future</span></h1>
 							<!-- <p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p> -->
 							<p>
 								<a href="Products.html" class="btn btn-secondary me-2">Products</a>
@@ -441,10 +536,10 @@
 				<div class="col-lg-5">
 					<div class="content-images">
 						<div class="top-image">
-							<img src="images/who-we-are-1.jpg" alt="Team Collaboration">
+								<img src="images/who-we-are-1.jpg" alt="Genoasis team India UAE water treatment supplier">
 						</div>
 						<div class="bottom-image">
-							<img src="images/who-we-are-2.jpg" alt="Underwater Scene">
+								<img src="images/who-we-are-2.jpg" alt="Industrial water filtration solutions India UAE – Genoasis">
 						</div>
 					</div>
 				</div>
@@ -531,7 +626,7 @@
 					<!-- Waste Water Treatment -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-							<img src="images/water-industry.png" alt="Water & Waste Water Treatment" class="img-fluid industry-icon">
+								<img src="images/water-industry.png" alt="Water and wastewater treatment supplier India UAE" class="img-fluid industry-icon">
 							<img src="images/water-industry-hover.jpg" alt="Water & Waste Water Treatment Details" class="img-fluid industry-hover">
 							<h4 class="text-center mt-2">Water & Waste Water Treatment</h4>
 						</div>	
@@ -540,7 +635,7 @@
 					<!-- Oil & Gas Industry -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-							<img src="images/oilgas-industry.png" alt="Oil & Gas Industry" class="img-fluid industry-icon">
+								<img src="images/oilgas-industry.png" alt="Oil and gas water treatment supplier India UAE" class="img-fluid industry-icon">
 							<img src="images/oilgas-industry-hover.jpg" alt="Oil & Gas Industry Details" class="img-fluid industry-hover">
 							<h4 class="text-center mt-2">Oil & Gas</h4>
 						</div>
@@ -549,7 +644,7 @@
 					<!-- Power Plant -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-							<img src="images/power-plant-industry.png" alt="Power Plant" class="img-fluid industry-icon">
+								<img src="images/power-plant-industry.png" alt="Power plant water systems supplier India UAE" class="img-fluid industry-icon">
 							<img src="images/power-plant-industry-hover.jpg" alt="Power Plant Details" class="img-fluid industry-hover">
 							<h4 class="text-center mt-2">Power Plant</h4>
 						</div>
@@ -558,7 +653,7 @@
 					<!-- Irrigation -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-							<img src="images/irrigation-industry.png" alt="Irrigation" class="img-fluid industry-icon">
+								<img src="images/irrigation-industry.png" alt="Irrigation water solutions supplier India UAE" class="img-fluid industry-icon">
 							<img src="images/irrigation-industry-hover.jpg" alt="Irrigation Details" class="img-fluid industry-hover">
 							<h4 class="text-center mt-2">Irrigation</h4>
 						</div>
@@ -567,7 +662,7 @@
 					<!-- Food Industry -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-							<img src="images/food-industry.png" alt="Food Industry" class="img-fluid industry-icon">
+								<img src="images/food-industry.png" alt="Food industry water treatment supplier India UAE" class="img-fluid industry-icon">
 							<img src="images/food-industry-hover.png" alt="Food Industry Details" class="img-fluid industry-hover">
 							<h4 class="text-center mt-2">Food</h4>
 						</div>
@@ -576,7 +671,7 @@
 					<!-- Desalination -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-							<img src="images/desalination-industry.png" alt="Desalination" class="img-fluid industry-icon">
+								<img src="images/desalination-industry.png" alt="Desalination systems supplier India UAE" class="img-fluid industry-icon">
 							<img src="images/desalination-industry-hover.jpg" alt="Desalination Details" class="img-fluid industry-hover">
 							<h4 class="text-center mt-2">Desalination</h4>
 						</div>
@@ -584,7 +679,7 @@
 					<!-- Paper Industry -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-							<img src="images/paper-industry.png" alt="Paper Industry" class="img-fluid industry-icon">
+								<img src="images/paper-industry.png" alt="Paper industry water systems supplier India UAE" class="img-fluid industry-icon">
 							<img src="images/paper-industry-hover.jpg" alt="Paper Industry Details" class="img-fluid industry-hover">
 							<h4 class="text-center mt-2">Paper</h4>
 						</div>
@@ -593,7 +688,7 @@
 					<!-- Process Industry -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-							<img src="images/process-industry.png" alt="Process Industry" class="img-fluid industry-icon">
+								<img src="images/process-industry.png" alt="Process industry water treatment supplier India UAE" class="img-fluid industry-icon">
 							<img src="images/process-industry-hover.jpg" alt="Process Industry Details" class="img-fluid industry-hover">
 							<h4 class="text-center mt-2">Process</h4>
 						</div>
@@ -610,7 +705,7 @@
 					<div class="col-lg-4">
 						<div class="mb-4 footer-logo-wrap">
 							<a href="#" class="footer-logo">
-								<img src="images/logo.png" alt="Company Logo" style="height: 50px;">
+								<img src="images/logo.png" alt="Genoasis industrial water treatment supplier India UAE" style="height: 50px;">
 							</a>
 						</div>							
 						<p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p>
