--- a/about.html
+++ b/about.html
@@ -116,12 +116,22 @@
 				color: white;
 			}
 
-			.hero-subtitle {
-				font-size: 1.5rem;
-				font-weight: 300;
-				margin-bottom: 2rem;
-				opacity: 0.9;
-			}
+		.hero-subtitle {
+			font-size: 1.5rem;
+			font-weight: 300;
+			margin-bottom: 2rem;
+			opacity: 0.9;
+		}
+
+		.hero-section a {
+			color: white !important;
+			text-decoration: underline;
+		}
+
+		.hero-section a:hover {
+			color: rgba(255, 255, 255, 0.8) !important;
+			text-decoration: underline;
+		}
 
 			/* About Content Section */
 			.about-content-section {
